Fix the table overflow-x in example

--- a/docs/styles.scss
+++ b/docs/styles.scss
@@ -88,7 +88,7 @@ body {
       padding: $space;
       position: relative;
     }
-    &#Table body {
+    &#Table .example {
       overflow-x: auto;
     }
   }
